[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "ujson>=5.10.0",
    "utils",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "requests>=2.32.3",
    "libipld>=3.0.1",
    "websockets>=15.0.1",
    "orjson>=3.10.15",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
utils = { path = './src/utils' }

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
